# XenUI

./: .doxyfile  .gitattributes  .gitignore  CMakeLists.txt  README.md
Examples/: CMakeLists.txt  main.cpp
Lib/: App.cpp  App.h  CMakeLists.txt  Canvas.cpp  Canvas.h  EventSystem.cpp  Events.h  Platform.h  Widget.cpp  Widget.h  Window.cpp  Window.h  XenApp.cpp  XenApp.h  XenUI.h
Lib/Core/: App.cpp  App.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Context.cpp  Context.h  Dimension.h  EventSystem.h  Events.h  IO.h  Interactive.h  Mathematics.h  Observable.cpp  Observable.h  Offset.cpp  Offset.h  Platform.h  Rectangle.cpp  Rectangle.h  Size.h  StrokeProperties.h  Types.h  Widget.cpp  Widget.h  Window.cpp  Window.h  WindowStyle.h
Lib/Widgets/: Container.cpp  Container.h  PushButton.cpp  PushButton.h
